# Jules

./: .gitignore  README.md  app.py  pyproject.toml
photo_organizer/: cloud_sync.py  exif_reader.py  image_discovery.py  organizer.py
static/: style.css
templates/: index.html  results.html
webapp/: Component.js  index.html  manifest.json
webapp/controller/: App.controller.js
webapp/i18n/: i18n.properties
webapp/view/: App.view.xml
