[tool.poetry]
name = "photo-organizer-web"
version = "0.1.0"
description = "A web-based tool to organize photos by date or location."
authors = ["Jules"]
packages = [
    { include = "photo_organizer" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
